# autoflow

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  NOTIFICATIONS.md  README.md  SIMPLE_API.md  VISUALIZATION.md  pyproject.toml
docs/: CONTINUOUS_DEMO_README.md  ENHANCEMENTS_SUMMARY.md  EXAMPLES_SUMMARY.md  MULTISTEP_WORKFLOWS.md  OBSERVABILITY_EXPORTERS.md  OPENAI_DEMO_README.md  api_reference.md  api_schemas.md  auth_audit_guide.md  autoflow_schemas.json  coding_standards_compliance.md  configuration_guide.md  configuration_summary.md  context_graph.md  context_graph_index.md  environment_variables_reference.md  grafana_and_config_summary.md  grafana_setup_guide.md  improvements.md  observability_summary.md  quick_start_configuration.md
docs/api/: apply.md  context_graph.md  decision_graph.md  evaluation.md  examples.md  extension_guide.md  observation_events.md  overview.md  proposals.md  workflow.md
examples/: README.md  alloy-config.example.yml  auth_audit_demo.py  context_graph_demo.py  exporters_demo.py  improvements_demo.py  metrics_server_example.py  multi_provider_demo.py  notification_demo.py  observability_demo.py  production_setup.py  security_demo.py  simple_api_demo.py  visualization_demo.py
examples/basic/: continuous_demo.py  continuous_demo_mock.py  demo.py  multistep_demo.py  openai_demo.py  workflow_demo.py
examples/context_sources/: s3_context_source.py  slack_integration.py  vector_database_context.py
examples/integrations/ai_frameworks/: ai_frameworks_integrations.py
examples/integrations/dbos/: README.md  dbos_demo.py
examples/integrations/observability/: otel_grafana_integration.py
examples/production/: production_deployment.py
examples/workflow_patterns/: workflow_patterns.py
src/autoflow/: __init__.py  __main__.py  api_models.py  cli.py  config.py  errors.py  factory.py  human_in_the_loop.py  logging.py  notifications.py  otel.py  schema.py  track.py  types.py  types_pyantic.py
src/autoflow/apply/: applier.py  backend.py  dbos_backend.py  dbos_queues.py  dbos_scheduler.py  git_backend.py  policy.py
src/autoflow/context_graph/: __init__.py  audit.py  auth.py  backends.py  builders.py  core.py  exceptions.py  llm.py  metrics.py  observability.py  observability_config.py  observability_exporters.py  security.py  testing.py
src/autoflow/context_graph/domains/: brand.py  campaign.py  publisher.py
src/autoflow/decide/: decision_graph.py  rules.py
src/autoflow/evaluate/: evaluator.py  llm_judge.py  replay.py  shadow.py
src/autoflow/graph/: context_graph.py  sqlite_store.py  store.py  store_async.py
src/autoflow/llm/: client.py
src/autoflow/notify/: notifier.py
src/autoflow/observe/: collector.py  events.py
src/autoflow/orchestrator/: engine.py  engine_async.py
src/autoflow/viz/: mermaid.py
src/autoflow/workflow/: graph_builder.py  metrics.py  queries.py  rules.py
src/autoflow_ai/: dataset.py  metrics.py  schemas.py
src/autoflow_ai/eval/: replay_ai.py
src/autoflow_ai/rules/: retry_tuning.py
tests/: README.md  TESTING_SUMMARY.md  __init__.py  conftest.py  test_api_models.py  test_apply.py  test_business_validators.py  test_cli.py  test_collector.py  test_config.py  test_context_graph.py  test_dbos_backend.py  test_dbos_queues.py  test_dbos_scheduler.py  test_decision_graph.py  test_engine.py  test_engine_smoke.py  test_errors.py  test_evaluators.py  test_factory.py  test_llm_client.py  test_logging.py  test_observe_events.py  test_otel.py  test_schema.py  test_types.py  test_types_pydantic.py  test_workflow.py
